Fix extra whitespace on all modals (#5464) * Do not add a minimum height to the modal body. * If any of the modal-body content requires a minimum height,   Add a wrapper container around the body and style the wrapper   element
Issue comment:
https://github.com/gocd/gocd/issues/5464#issuecomment-446593668

--- a/server/webapp/WEB-INF/rails/webpack/views/components/modal/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/components/modal/index.scss
@@ -19,7 +19,6 @@ $overlay-bg: rgba(0, 0, 0, 0.8);
 $overlay-header-bg: $go-darkblue;
 $overlay-width: 500px;
 $overlay-height: 500px;
-$minimum-overlay-height: 150px;
 $overlay-border-color: $global-border-color;
 $overlay-header-txt: #fff;
 
@@ -106,7 +105,6 @@ $overlay-header-txt: #fff;
   }
   @media(min-width: $screen-md) {
     max-height: $overlay-height;
-    min-height: $minimum-overlay-height;
   }
 
 }
